# svc-toolkit

./: .coveragerc  .env.example  .gitignore  404.html  LICENSE  README.md  config.yml  data.py  environment.yml  environment_dev.yml  evaluator.py  index.html  mkdocs.yml  pyproject.toml  sdr.csv  sisdr.csv  sitemap.xml
.github/workflows/: action.yml  actions.yml  deployment.yml  deployments.yml  tests.yml
development/: index.html
docs/: development.md  installation.md  troubleshooting.md  usage.md
installation/: index.html
model/: loss.csv
search/: search_index.json
separation/: audio.py  constants.py  contants.py  data.py  eval.py  evaluator.py  logger.py  model.py  models.py  preprocess.py  separator.py  train.py  utility.py
src/: main.py  separation_evaluation.py  separation_preprocess.py  separation_train.py
src/conversion/: converter_trainer.py  mixer.py  voice_converter.py
src/presenter/: conversion.py  separation.py  training.py  vocal_separation.py  voice_conversion.py
src/separation/: audio.py  constants.py  data.py  evaluator.py  graph.py  models.py  preprocess.py  separator.py  utility.py
src/svc_toolkit/: main.py  separation_evaluation.py  separation_preprocess.py  separation_train.py
src/svc_toolkit/conversion/: converter.py  converter_trainer.py  mixer.py
src/svc_toolkit/models/: manifest.yml
src/svc_toolkit/presenter/: common.py  conversion.py  mixing.py  separation.py  training.py
src/svc_toolkit/separation/: audio.py  constants.py  data.py  evaluator.py  logger.py  models.py  preprocess.py  separator.py  utility.py
src/svc_toolkit/utility/: functions.py
src/svc_toolkit/widget/: common.py  conversion.py  loading_overlay.py  loading_window.py  main_window.py  mixing.py  separation.py  training.py
src/vc_toolkit/: main.py  separation_evaluation.py  separation_preprocess.py  separation_train.py
src/vc_toolkit/conversion/: converter.py
src/vc_toolkit/presenter/: common.py  conversion.py  mixing.py  separation.py  training.py
src/vc_toolkit/separation/: data.py  evaluator.py  preprocess.py  separator.py  utility.py
src/vc_toolkit/utility/: functions.py
src/vc_toolkit/widget/: common.py  conversion.py  loading_overlay.py  mixing.py  separation.py  training.py
src/widget/: common.py  conversion.py  loading_overlay.py  loading_window.py  main_window.py  mixing.py  separation.py  training.py  vocal_separation.py  voice_conversion.py
tests/conversion/: test_converter.py  test_mixer.py
tests/presenter/: test_common.py  test_conversion.py  test_mixing.py  test_separation.py  test_training.py  test_vocal_separation.py
tests/separation/: test_audio.py  test_data.py  test_evaluator.py  test_logger.py  test_models.py  test_preprocess.py  test_separator.py  test_utility.py
tests/widget/: test_common.py  test_config.json  test_conversion.py  test_loading_overlay.py  test_loading_window.py  test_main_window.py  test_mixing.py  test_separation.py  test_training.py
troubleshooting/: index.html
usage/: index.html
