[tool.poetry]
name = "svc-toolkit"
version = "1.0.2"
description = "A self-contained singing voice conversion toolkit."
authors = ["jljl1337 <lckjack123@gmail.com>"]
license = ""
readme = "README.md"
#repository = ""
#documentation = ""
classifiers = [
    "Operating System :: OS Independent",
]
packages = [
   { include = "svc_toolkit", from = "src" },
]

[tool.poetry.scripts]
vct = "svc_toolkit.main:main"
vspreprocess = "svc_toolkit.separation_preprocess:main"
vstrain = "svc_toolkit.separation_train:main"
vseval = "svc_toolkit.separation_train:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "1.26.3"
scipy = "1.12.0"
pyyaml = "6.0.1"
torch = "2.1.1"
torchaudio = "2.1.1"
lightning = "2.1.3"
torchmetrics = "1.2.0"
pandas = "2.1.3"
scikit-learn = "1.4.0"
matplotlib = "3.8.1"
librosa = "0.10.1"
so-vits-svc-fork = "4.1.40"
pyside6 = "6.6.1"
pyside6-utils = "1.2.2"
huggingface-hub = "0.20.3"
moises-db = { git = "https://github.com/moises-ai/moises-db.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
poetry = "^1.8"
setuptools = "^69.2"
pytest = "8.0.0"
pytest-qt = "^4.4"
pytest-cov = "^4.1"
pytest-xvfb = "^3.0.0"
mkdocs-material = "^9.5"

[tool.pytest.ini_options]
addopts = "--cov=src/ --cov-config=.coveragerc --cov-report=html --cov-report=xml -W ignore::DeprecationWarning "
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    'if __name__ == "__main__":',
]